@@ -236,7 +236,7 @@ def dependencies(target):
         ffmpeg_options = {}
 
     return (('ffmpeg-cdist', 'cd922b8', ffmpeg_options),
-            ('libdcp', '4e6b78d'),
+            ('libdcp', '043d382'),
             ('libsub', 'b082fb6'))
 
 def configure_options(target):
