@@ -1,3 +1,8 @@
+2016-05-24  c.hetherington  <cth@carlh.net>
+
+	* Disallow referencing of Interop DCPs in SMPTE
+	films, and vice versa (#804).
+
 2016-05-23  c.hetherington  <cth@carlh.net>
 
 	* Fix missing words in properties window (#874).
